# Internet-speed-meter-

./: Cargo.toml  README.md  文档本地化报告.md
docs/: API文档.md  开发指南.md  用户指南.md
src/: diagnostics.rs  main.rs  speed_test.rs  utils.rs
